syntax = "proto3";

package range;

import "google/protobuf/timestamp.proto";

message DateRange {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}

message BigIntRange {
  int64 start = 1;
  int64 end = 2;
}